# webwarden-admin-app

./: .gitattributes  .gitignore  README.md  SPEC.md  conftest.py  install.sh  pyproject.toml  uninstall.sh
backend/: webwarden
backend/logrotate/: webwarden
backend/polkit/: 50-webwarden.rules  org.webwarden.admin.policy
backend/systemd/: webwarden-dns@.service  webwarden-logprune.service  webwarden-logprune.timer  webwarden-nft.service
backend/tests/: test_apply.py  test_cli.py  test_dnsmasq_config.py  test_domain_groups.py  test_jsonapi.py  test_logparse.py  test_nftables_ruleset.py  test_services.py  test_settings.py  test_state.py  test_users.py  test_validation.py  test_validation_sync.py
backend/webwarden_cli/: __init__.py  __main__.py  apply.py  cli.py  dnsmasq_config.py  domain_groups.py  jsonapi.py  logparse.py  nftables_ruleset.py  paths.py  services.py  settings.py  state.py  users.py  validation.py
docs/: acceptance-checklist.md  code-standards.md  development-roadmap.md  project-changelog.md  system-architecture.md
docs/journals/: 260624-webwarden-backend-gui-build.md
gui/: webwarden-admin
gui/data/: webwarden-admin.css  webwarden-admin.desktop
gui/tests/: test_approve_grouping.py  test_cli_args.py  test_gui_validation.py  test_log_filter.py
gui/webwarden_admin/: __init__.py  __main__.py  app.py  cli_args.py  cli_client.py  window.py
plans/260624-2214-webwarden-backend-gui-build/: phase-01-foundations-and-conventions.md  phase-02-backend-cli-core-and-state.md  (+10 more)
scripts/: check.ps1  check.sh
testkit/: __init__.py  domain_cases.py
(+20 files in other folders)
